---
title: Arquitectura Hexagonal - Módulo Artículo (v3.36.0)
---

classDiagram
    direction TB

    namespace domain {
        class Articulo {
            +Long articuloId
            +String nombre
            +String descripcion
            +String unidad
            +BigDecimal precio
            +Byte inventariable
            +Long stockMinimo
            +BigDecimal numeroCuenta
            +String tipo
            +Byte directo
            +Byte habilitado
            +Cuenta cuenta
        }

        class ArticuloSearch {
            +Long articuloId
            +String nombre
            +String descripcion
            +String unidad
            +BigDecimal precio
            +Byte inventariable
            +Long stockMinimo
            +BigDecimal numeroCuenta
            +String tipo
            +Byte directo
            +Byte habilitado
            +String search
            +OffsetDateTime fechaAuditoria
            +String usuarioAuditoria
        }

        class ArticuloRepository {
            << interface >>
            +create(Articulo) Articulo
            +findById(Long) Optional~Articulo~
            +findAll() List~Articulo~
            +update(Long, Articulo) Optional~Articulo~
            +deleteById(Long) boolean
            +findLast() Optional~Articulo~
        }
    }

    namespace application {
        class ArticuloService {
            -CreateArticuloUseCase createArticuloUseCase
            -GetArticuloByIdUseCase getArticuloByIdUseCase
            -GetAllArticulosUseCase getAllArticulosUseCase
            -UpdateArticuloUseCase updateArticuloUseCase
            -DeleteArticuloUseCase deleteArticuloUseCase
            -GetNewArticuloUseCase getNewArticuloUseCase
            -GetPaginatedArticulosUseCase getPaginatedArticulosUseCase
            -SearchArticulosUseCase searchArticulosUseCase
            +createArticulo(Articulo) Articulo
            +getArticuloById(Long) Optional~Articulo~
            +getAllArticulos() List~Articulo~
            +updateArticulo(Long, Articulo) Optional~Articulo~
            +deleteArticulo(Long) boolean
            +getNewArticulo() Articulo
            +getPaginated(int, int) PaginatedResponse~Articulo~
            +searchArticulos(String) List~ArticuloSearch~
        }

    }
    namespace application_usecases {
            class CreateArticuloUseCaseImpl {
                -ArticuloRepository repository
                +createArticulo(Articulo) Articulo
            }

            class GetArticuloByIdUseCaseImpl {
                -ArticuloRepository repository
                +getArticuloById(Long) Optional~Articulo~
            }

            class GetAllArticulosUseCaseImpl {
                -ArticuloRepository repository
                +getAllArticulos() List~Articulo~
            }

            class UpdateArticuloUseCaseImpl {
                -ArticuloRepository repository
                +updateArticulo(Long, Articulo) Optional~Articulo~
            }

            class DeleteArticuloUseCaseImpl {
                -ArticuloRepository repository
                +deleteArticulo(Long) boolean
            }

        class GetNewArticuloUseCaseImpl {
            -ArticuloRepository repository
            +getNewArticulo() Articulo
        }

        class GetPaginatedArticulosUseCaseImpl {
            -ArticuloRepository repository
            +getPaginated(int, int) PaginatedResponse~Articulo~
        }

        class SearchArticulosUseCaseImpl {
            -ArticuloRepository repository
            +searchArticulos(String) List~ArticuloSearch~
        }
    }
    namespace application {

        class CreateArticuloUseCase {
            << interface >>
            +createArticulo(Articulo) Articulo
        }

        class GetArticuloByIdUseCase {
            << interface >>
            +getArticuloById(Long) Optional~Articulo~
        }

        class GetAllArticulosUseCase {
            << interface >>
            +getAllArticulos() List~Articulo~
        }

        class UpdateArticuloUseCase {
            << interface >>
            +updateArticulo(Long, Articulo) Optional~Articulo~
        }

        class DeleteArticuloUseCase {
            << interface >>
            +deleteArticulo(Long) boolean
        }

        class GetNewArticuloUseCase {
            << interface >>
            +getNewArticulo() Articulo
        }

        class GetPaginatedArticulosUseCase {
            << interface >>
            +getPaginated(int, int) PaginatedResponse~Articulo~
        }

        class SearchArticulosUseCase {
            << interface >>
            +searchArticulos(String) List~ArticuloSearch~
        }
    }

    namespace infrastructure_persistence {
            class ArticuloEntity {
                +Long articuloId
                +String nombre
                +String descripcion
                +String unidad
                +BigDecimal precio
                +Byte inventariable
                +Long stockMinimo
                +BigDecimal numeroCuenta
                +String tipo
                +Byte directo
                +Byte habilitado
                +CuentaEntity cuenta
            }

            class JpaArticuloRepository {
                << JpaRepository >>
                +findTopByOrderByArticuloIdDesc() Optional~ArticuloEntity~
            }

            class JpaArticuloRepositoryAdapter {
                -JpaArticuloRepository jpaArticuloRepository
                -ArticuloMapper articuloMapper
                +create(Articulo) Articulo
                +findById(Long) Optional~Articulo~
                +findAll() List~Articulo~
                +update(Long, Articulo) Optional~Articulo~
                +deleteById(Long) boolean
                +findLast() Optional~Articulo~
            }

            class ArticuloMapper {
                -CuentaMapper cuentaMapper
                +toDomainModel(ArticuloEntity) Articulo
                +toEntity(Articulo) ArticuloEntity
                +toSearchDomain(ArticuloKey) ArticuloSearch
            }
    }
    namespace infrastructure_web {
            class ArticuloController {
                -ArticuloService articuloService
                -ArticuloDtoMapper articuloDtoMapper
                -CuentaService cuentaService
                +createArticulo(ArticuloRequest) ResponseEntity~ArticuloResponse~
                +getArticuloById(Long) ResponseEntity~ArticuloResponse~
                +getAllArticulos() ResponseEntity~List~ArticuloResponse~~
                +updateArticulo(Long, ArticuloRequest) ResponseEntity~ArticuloResponse~
                +deleteArticulo(Long) ResponseEntity~Void~
                +getNewArticulo() ResponseEntity~ArticuloResponse~
                +getPaginatedArticulos(int, int) ResponseEntity~PaginatedResponse~ArticuloResponse~~
                +searchArticulos(List~String~) ResponseEntity~List~ArticuloSearchResponse~~
            }

            class ArticuloRequest {
                +Long articuloId
                +String nombre
                +String descripcion
                +String unidad
                +BigDecimal precio
                +Byte inventariable
                +Long stockMinimo
                +BigDecimal numeroCuenta
                +String tipo
                +Byte directo
                +Byte habilitado
            }

            class ArticuloResponse {
                +Long articuloId
                +String nombre
                +String descripcion
                +String unidad
                +BigDecimal precio
                +Byte inventariable
                +Long stockMinimo
                +BigDecimal numeroCuenta
                +String tipo
                +Byte directo
                +Byte habilitado
                +Cuenta cuenta
            }

            class ArticuloSearchResponse {
                +Long articuloId
                +String nombre
                +String descripcion
                +String unidad
                +BigDecimal precio
                +Byte inventariable
                +Long stockMinimo
                +BigDecimal numeroCuenta
                +Cuenta cuenta
                +String tipo
                +Byte directo
                +Byte habilitado
                +String search
                +OffsetDateTime fechaAuditoria
                +String usuarioAuditoria
            }

            class ArticuloDtoMapper {
                +toDomain(ArticuloRequest) Articulo
                +toResponse(Articulo) ArticuloResponse
                +toSearchResponse(ArticuloSearch) ArticuloSearchResponse
            }
    }

    ArticuloService --> CreateArticuloUseCase : uses
    ArticuloService --> GetArticuloByIdUseCase : uses
    ArticuloService --> GetAllArticulosUseCase : uses
    ArticuloService --> UpdateArticuloUseCase : uses
    ArticuloService --> DeleteArticuloUseCase : uses
    ArticuloService --> GetNewArticuloUseCase : uses
    ArticuloService --> GetPaginatedArticulosUseCase : uses
    ArticuloService --> SearchArticulosUseCase : uses

    CreateArticuloUseCaseImpl ..|> CreateArticuloUseCase : implements
    GetArticuloByIdUseCaseImpl ..|> GetArticuloByIdUseCase : implements
    GetAllArticulosUseCaseImpl ..|> GetAllArticulosUseCase : implements
    UpdateArticuloUseCaseImpl ..|> UpdateArticuloUseCase : implements
    DeleteArticuloUseCaseImpl ..|> DeleteArticuloUseCase : implements
    GetNewArticuloUseCaseImpl ..|> GetNewArticuloUseCase : implements
    GetPaginatedArticulosUseCaseImpl ..|> GetPaginatedArticulosUseCase : implements
    SearchArticulosUseCaseImpl ..|> SearchArticulosUseCase : implements

    CreateArticuloUseCaseImpl --> ArticuloRepository : uses
    GetArticuloByIdUseCaseImpl --> ArticuloRepository : uses
    GetAllArticulosUseCaseImpl --> ArticuloRepository : uses
    UpdateArticuloUseCaseImpl --> ArticuloRepository : uses
    DeleteArticuloUseCaseImpl --> ArticuloRepository : uses
    GetNewArticuloUseCaseImpl --> ArticuloRepository : uses
    GetPaginatedArticulosUseCaseImpl --> ArticuloRepository : uses
    SearchArticulosUseCaseImpl --> ArticuloRepository : uses

    JpaArticuloRepositoryAdapter ..|> ArticuloRepository : implements
    JpaArticuloRepositoryAdapter --> JpaArticuloRepository : uses
    JpaArticuloRepositoryAdapter --> ArticuloMapper : uses

    ArticuloMapper --> Articulo : maps
    ArticuloMapper --> ArticuloEntity : maps
    JpaArticuloRepository --> ArticuloEntity : persists

    ArticuloController --> ArticuloService : calls
    ArticuloController --> ArticuloDtoMapper : uses
    ArticuloController --> CuentaService : calls
    ArticuloDtoMapper --> Articulo : maps
    ArticuloDtoMapper --> ArticuloResponse : maps
    ArticuloDtoMapper --> ArticuloSearchResponse : maps
